# turtlelake

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  REQUIREMENTS.md  TEST_SCENARIOS.md  pyproject.toml
.github/workflows/: release.yml  test.yml
clients/typescript/: README.md  package.json  tsconfig.json
examples/: _demo_runner.py  demo_gov_dcat.py  demo_legal_lkif.py  demo_medical_doid.py  demo_science_go.py  embed_with_hash.py  embed_with_sentence_transformers.py  quickstart.py  real_user_test.py  speed_bench.py
scripts/: README.md  benchmark_graphrag.py  probe_exe_shim.py  probe_install.py  probe_mcp.py  probe_validate.py  smoke_mcp.py
scripts/benchmarks/: _common.py  _crash_helper.py  ann_sift1m.py  musique.py  openie_extract.py  operational.py  precache_st_model.py
tests/: _concurrent_helpers.py  test_advanced_features.py  test_adversarial.py  test_agent_primitives.py  test_atomic_rollback.py  test_concurrent_writes.py  test_config.py  test_crash_recovery.py  test_discovery.py  test_external_readers.py  test_graph_rag.py  test_in_memory_search.py  test_ingest.py  test_maintenance.py  test_mcp_e2e.py  test_mcp_tools.py  test_no_egress.py  test_observability.py  test_polish.py  test_portability.py  test_provenance_and_diff.py  test_rate_limits.py  test_refresh_and_memory.py  test_remote.py  test_reproducibility.py  test_schema.py  test_secure_tool.py  test_security.py  test_sources_and_graphs.py  test_speedup.py  test_user_feedback.py  test_validate.py  test_vector_validation.py  test_vectors.py
(+14 files in other folders)
